--- a/aboutPython.html
+++ b/aboutPython.html
@@ -12,7 +12,7 @@
 <body>
     <div id="wrapper">
         <div id="header">
-            <img src="imaages/python.png" alt="python logo">
+            <img src="images/python.png" alt="python logo">
             <div id="header-content">
                 <p><span class="white">Text Size: </span><a href="">Normal</a> | <a href="">Large</a></p>
                 <div id="search-box">
